APIs para exercícios/api-python/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-service
spec:
  type: NodePort
  selector:
    app: python-app
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30008
