APIs para exercícios/api-python/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-ingress
spec:
  rules:
  - host: app.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
              service:
                name: python-service
                port:
                  number: 3000
